cc_library(
  name = "graph_files",
  srcs = glob(
    include = [
      "*.hpp",
      "*/*.hpp",
      "*/*/*.hpp",
    ],
  ),
  hdrs =  glob(
    include = [
      "*.hpp",
      "*/*.hpp",
      "*/*/*.hpp",
      "*.h",
      "*/*.h",
      "*/*/*.h",
    ],
  ),
  copts = [
    "-std=c++17", 
    "/std:c++17",
  ],
  visibility=["//visibility:public"],
  deps = [
    "@com_google_googletest//:gtest_main",
  ],
)

cc_test(
  name = "all_tests",
  size = "small",
  srcs = glob(
    include = [
      "test_*.cc",
      "*/test_*.cc",
      "*/*/test_*.cc",
      "*/*/*/test_*.cc",
    ],
    exclude = [],
  ),
  copts = ["-std=c++17"],
  linkstatic = 0,
  deps = [
    "@com_google_googletest//:gtest_main",
    ":graph_files"
  ],
)
